tour_and_travel_app/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tourmate-backend
  namespace: tourmate
  labels:
    app: tourmate-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tourmate-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: tourmate-backend
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: backend
          image: tourmateacru42eqvqvidncw.azurecr.io/tourmate-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
