tour_and_travel_app/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tourmate-backend-svc
  namespace: tourmate
spec:
  selector:
    app: tourmate-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
