tour_and_travel_app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tourmate-ingress
  namespace: tourmate
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - 104.211.209.155.nip.io
    secretName: tourmate-tls-secret
  rules:
  - host: 104.211.209.155.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tourmate-backend-svc
            port:
              number: 80
